MAJOR CHANGES in JADE 3.6 (05 May 2008)
==========================================================================
GENERAL IMPROVEMENTS:

BUG-FIXES:
- Added sanity check in LoaderBehaviour to avoid NullPoinerException in case of null parameters (problem reported by Mehrdad Senobari)


LEAP:

ADD-ONS:

DOCUMENTATION:

POSSIBLE BACKWARD INCOMPATIBILITIES:



MAJOR CHANGES in JADE 3.6 (05 May 2008)
==========================================================================
GENERAL IMPROVEMENTS:
- Added support to specify the jar file where to load agent code at agent startup
- SubscriptionResponder: Modified according to comments by Chris Audley and Henrique Lopes Cardoso
- Extended TopicManagementService to deal with registrations to topic templates (e.g. foo.bar.*)
- Added responder class for Iterated-Contract-Net protocol using the Single-Session approach
- Added SSResponderDispatcher class to manage protocol initiation messages and dispatch them to SSResponder behaviours
- Added support for different implementations of the Agent MessageQueue. By Arend Freije [a.freije@minihouse.com] 
- Added method setO2AManager() in Agent class to associate a single behaviour to the O2A communication mechanism. 
- Modified automatic main detection mechanism to print a warning and go on when the initialization fails (on the Main Container) and it was not explicitly tured on
- Modified automatic main detection mechanism to require users to specify '*' as platform name (on peripheral containers) when they want to connect to whatever platform 
- Added support to deregister transitions in FSMBehaviour 
- Modified MainReplicationService to issue NEW_NODE and NEW_SLICE VCommands when a Main Container replica enters the ring
- Added method dump() to BaseService to support runtime service inspection by means of the ContainerMonitorAgent (misc Add-On)
- Added method getLocalServices() in ServiceManager interface